<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/medikamente_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.Medikamente_fragment"
    android:background="@color/chinese_silver"
    android:tag="fragment_heute">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/morgens" />

    <ListView
        android:id="@+id/listviewHeute"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:listSelector="#0f0">

    </ListView>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mittags"/>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listviewHeute_mittags"
            android:listSelector="#0f0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abends"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listviewHeute_abends"
        android:listSelector="#0f0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/erledigt_heute"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:text="@string/erledigt"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/verschieben_heute"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/verschieben"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>
