<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_heute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/anzahl_heute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/_1" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/kommentar_heute"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/kommentar" />

</LinearLayout>
